src/snapshots/redmine_tui_draft__test_support__issue_select_popup_component_updated_body.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 80, height: 24 }
00: "                                                                                "
01: "                                                                                "
02: "        ┌Issue選 択 ─────────────────────────────────────────────────────┐        " | 8:"┌" fg=Reset bg=Reset mod=NONE, 9:"I" fg=Reset bg=Reset mod=NONE, 10:"s" fg=Reset bg=Reset mod=NONE, 11:"s" fg=Reset bg=Reset mod=NONE, 12:"u" fg=Reset bg=Reset mod=NONE, 13:"e" fg=Reset bg=Reset mod=NONE, 14:"選" fg=Reset bg=Reset mod=NONE, 16:"択" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"─" fg=Reset bg=Reset mod=NONE, 39:"─" fg=Reset bg=Reset mod=NONE, 40:"─" fg=Reset bg=Reset mod=NONE, 41:"─" fg=Reset bg=Reset mod=NONE, 42:"─" fg=Reset bg=Reset mod=NONE, 43:"─" fg=Reset bg=Reset mod=NONE, 44:"─" fg=Reset bg=Reset mod=NONE, 45:"─" fg=Reset bg=Reset mod=NONE, 46:"─" fg=Reset bg=Reset mod=NONE, 47:"─" fg=Reset bg=Reset mod=NONE, 48:"─" fg=Reset bg=Reset mod=NONE, 49:"─" fg=Reset bg=Reset mod=NONE, 50:"─" fg=Reset bg=Reset mod=NONE, 51:"─" fg=Reset bg=Reset mod=NONE, 52:"─" fg=Reset bg=Reset mod=NONE, 53:"─" fg=Reset bg=Reset mod=NONE, 54:"─" fg=Reset bg=Reset mod=NONE, 55:"─" fg=Reset bg=Reset mod=NONE, 56:"─" fg=Reset bg=Reset mod=NONE, 57:"─" fg=Reset bg=Reset mod=NONE, 58:"─" fg=Reset bg=Reset mod=NONE, 59:"─" fg=Reset bg=Reset mod=NONE, 60:"─" fg=Reset bg=Reset mod=NONE, 61:"─" fg=Reset bg=Reset mod=NONE, 62:"─" fg=Reset bg=Reset mod=NONE, 63:"─" fg=Reset bg=Reset mod=NONE, 64:"─" fg=Reset bg=Reset mod=NONE, 65:"─" fg=Reset bg=Reset mod=NONE, 66:"─" fg=Reset bg=Reset mod=NONE, 67:"─" fg=Reset bg=Reset mod=NONE, 68:"─" fg=Reset bg=Reset mod=NONE, 69:"─" fg=Reset bg=Reset mod=NONE, 70:"─" fg=Reset bg=Reset mod=NONE, 71:"┐" fg=Reset bg=Reset mod=NONE
03: "        │Project          ID      Issue                                │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 9:"P" fg=LightGreen bg=Reset mod=BOLD, 10:"r" fg=LightGreen bg=Reset mod=BOLD, 11:"o" fg=LightGreen bg=Reset mod=BOLD, 12:"j" fg=LightGreen bg=Reset mod=BOLD, 13:"e" fg=LightGreen bg=Reset mod=BOLD, 14:"c" fg=LightGreen bg=Reset mod=BOLD, 15:"t" fg=LightGreen bg=Reset mod=BOLD, 16:" " fg=LightGreen bg=Reset mod=BOLD, 17:" " fg=LightGreen bg=Reset mod=BOLD, 18:" " fg=LightGreen bg=Reset mod=BOLD, 19:" " fg=LightGreen bg=Reset mod=BOLD, 20:" " fg=LightGreen bg=Reset mod=BOLD, 21:" " fg=LightGreen bg=Reset mod=BOLD, 22:" " fg=LightGreen bg=Reset mod=BOLD, 23:" " fg=LightGreen bg=Reset mod=BOLD, 24:" " fg=LightGreen bg=Reset mod=BOLD, 25:" " fg=LightGreen bg=Reset mod=BOLD, 26:"I" fg=LightGreen bg=Reset mod=BOLD, 27:"D" fg=LightGreen bg=Reset mod=BOLD, 28:" " fg=LightGreen bg=Reset mod=BOLD, 29:" " fg=LightGreen bg=Reset mod=BOLD, 30:" " fg=LightGreen bg=Reset mod=BOLD, 31:" " fg=LightGreen bg=Reset mod=BOLD, 32:" " fg=LightGreen bg=Reset mod=BOLD, 33:" " fg=LightGreen bg=Reset mod=BOLD, 34:"I" fg=LightGreen bg=Reset mod=BOLD, 35:"s" fg=LightGreen bg=Reset mod=BOLD, 36:"s" fg=LightGreen bg=Reset mod=BOLD, 37:"u" fg=LightGreen bg=Reset mod=BOLD, 38:"e" fg=LightGreen bg=Reset mod=BOLD, 39:" " fg=LightGreen bg=Reset mod=BOLD, 40:" " fg=LightGreen bg=Reset mod=BOLD, 41:" " fg=LightGreen bg=Reset mod=BOLD, 42:" " fg=LightGreen bg=Reset mod=BOLD, 43:" " fg=LightGreen bg=Reset mod=BOLD, 44:" " fg=LightGreen bg=Reset mod=BOLD, 45:" " fg=LightGreen bg=Reset mod=BOLD, 46:" " fg=LightGreen bg=Reset mod=BOLD, 47:" " fg=LightGreen bg=Reset mod=BOLD, 48:" " fg=LightGreen bg=Reset mod=BOLD, 49:" " fg=LightGreen bg=Reset mod=BOLD, 50:" " fg=LightGreen bg=Reset mod=BOLD, 51:" " fg=LightGreen bg=Reset mod=BOLD, 52:" " fg=LightGreen bg=Reset mod=BOLD, 53:" " fg=LightGreen bg=Reset mod=BOLD, 54:" " fg=LightGreen bg=Reset mod=BOLD, 55:" " fg=LightGreen bg=Reset mod=BOLD, 56:" " fg=LightGreen bg=Reset mod=BOLD, 57:" " fg=LightGreen bg=Reset mod=BOLD, 58:" " fg=LightGreen bg=Reset mod=BOLD, 59:" " fg=LightGreen bg=Reset mod=BOLD, 60:" " fg=LightGreen bg=Reset mod=BOLD, 61:" " fg=LightGreen bg=Reset mod=BOLD, 62:" " fg=LightGreen bg=Reset mod=BOLD, 63:" " fg=LightGreen bg=Reset mod=BOLD, 64:" " fg=LightGreen bg=Reset mod=BOLD, 65:" " fg=LightGreen bg=Reset mod=BOLD, 66:" " fg=LightGreen bg=Reset mod=BOLD, 67:" " fg=LightGreen bg=Reset mod=BOLD, 68:" " fg=LightGreen bg=Reset mod=BOLD, 69:" " fg=LightGreen bg=Reset mod=BOLD, 70:" " fg=LightGreen bg=Reset mod=BOLD, 71:"│" fg=Reset bg=Reset mod=NONE
04: "        │Sample Project   1       issue1                               │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 9:"S" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:"a" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:"m" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:"l" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:"e" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:"P" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:"r" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 18:"o" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:"j" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 20:"e" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:"c" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 22:"t" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 26:"1" fg=Reset bg=Rgb(34, 34, 34) mod=NONE, 27:" " fg=Reset bg=Rgb(34, 34, 34) mod=NONE, 28:" " fg=Reset bg=Rgb(34, 34, 34) mod=NONE, 29:" " fg=Reset bg=Rgb(34, 34, 34) mod=NONE, 30:" " fg=Reset bg=Rgb(34, 34, 34) mod=NONE, 31:" " fg=Reset bg=Rgb(34, 34, 34) mod=NONE, 32:" " fg=Reset bg=Rgb(34, 34, 34) mod=NONE, 33:" " fg=Reset bg=Rgb(34, 34, 34) mod=NONE, 34:"i" fg=Reset bg=Reset mod=NONE, 35:"s" fg=Reset bg=Reset mod=NONE, 36:"s" fg=Reset bg=Reset mod=NONE, 37:"u" fg=Reset bg=Reset mod=NONE, 38:"e" fg=Reset bg=Reset mod=NONE, 39:"1" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
05: "        │                 2                                            │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 26:"2" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
06: "        │                 3       updated description                  │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 26:"3" fg=Reset bg=Reset mod=NONE, 34:"u" fg=Reset bg=Reset mod=NONE, 35:"p" fg=Reset bg=Reset mod=NONE, 36:"d" fg=Reset bg=Reset mod=NONE, 37:"a" fg=Reset bg=Reset mod=NONE, 38:"t" fg=Reset bg=Reset mod=NONE, 39:"e" fg=Reset bg=Reset mod=NONE, 40:"d" fg=Reset bg=Reset mod=NONE, 42:"d" fg=Reset bg=Reset mod=NONE, 43:"e" fg=Reset bg=Reset mod=NONE, 44:"s" fg=Reset bg=Reset mod=NONE, 45:"c" fg=Reset bg=Reset mod=NONE, 46:"r" fg=Reset bg=Reset mod=NONE, 47:"i" fg=Reset bg=Reset mod=NONE, 48:"p" fg=Reset bg=Reset mod=NONE, 49:"t" fg=Reset bg=Reset mod=NONE, 50:"i" fg=Reset bg=Reset mod=NONE, 51:"o" fg=Reset bg=Reset mod=NONE, 52:"n" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
07: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
08: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
09: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
10: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
11: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
12: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
13: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
14: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
15: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
16: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
17: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
18: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
19: "        │                                                              │        " | 8:"│" fg=Reset bg=Reset mod=NONE, 71:"│" fg=Reset bg=Reset mod=NONE
20: "        └──────────────────────────────────────────────────────────────┘        " | 8:"└" fg=Reset bg=Reset mod=NONE, 9:"─" fg=Reset bg=Reset mod=NONE, 10:"─" fg=Reset bg=Reset mod=NONE, 11:"─" fg=Reset bg=Reset mod=NONE, 12:"─" fg=Reset bg=Reset mod=NONE, 13:"─" fg=Reset bg=Reset mod=NONE, 14:"─" fg=Reset bg=Reset mod=NONE, 15:"─" fg=Reset bg=Reset mod=NONE, 16:"─" fg=Reset bg=Reset mod=NONE, 17:"─" fg=Reset bg=Reset mod=NONE, 18:"─" fg=Reset bg=Reset mod=NONE, 19:"─" fg=Reset bg=Reset mod=NONE, 20:"─" fg=Reset bg=Reset mod=NONE, 21:"─" fg=Reset bg=Reset mod=NONE, 22:"─" fg=Reset bg=Reset mod=NONE, 23:"─" fg=Reset bg=Reset mod=NONE, 24:"─" fg=Reset bg=Reset mod=NONE, 25:"─" fg=Reset bg=Reset mod=NONE, 26:"─" fg=Reset bg=Reset mod=NONE, 27:"─" fg=Reset bg=Reset mod=NONE, 28:"─" fg=Reset bg=Reset mod=NONE, 29:"─" fg=Reset bg=Reset mod=NONE, 30:"─" fg=Reset bg=Reset mod=NONE, 31:"─" fg=Reset bg=Reset mod=NONE, 32:"─" fg=Reset bg=Reset mod=NONE, 33:"─" fg=Reset bg=Reset mod=NONE, 34:"─" fg=Reset bg=Reset mod=NONE, 35:"─" fg=Reset bg=Reset mod=NONE, 36:"─" fg=Reset bg=Reset mod=NONE, 37:"─" fg=Reset bg=Reset mod=NONE, 38:"─" fg=Reset bg=Reset mod=NONE, 39:"─" fg=Reset bg=Reset mod=NONE, 40:"─" fg=Reset bg=Reset mod=NONE, 41:"─" fg=Reset bg=Reset mod=NONE, 42:"─" fg=Reset bg=Reset mod=NONE, 43:"─" fg=Reset bg=Reset mod=NONE, 44:"─" fg=Reset bg=Reset mod=NONE, 45:"─" fg=Reset bg=Reset mod=NONE, 46:"─" fg=Reset bg=Reset mod=NONE, 47:"─" fg=Reset bg=Reset mod=NONE, 48:"─" fg=Reset bg=Reset mod=NONE, 49:"─" fg=Reset bg=Reset mod=NONE, 50:"─" fg=Reset bg=Reset mod=NONE, 51:"─" fg=Reset bg=Reset mod=NONE, 52:"─" fg=Reset bg=Reset mod=NONE, 53:"─" fg=Reset bg=Reset mod=NONE, 54:"─" fg=Reset bg=Reset mod=NONE, 55:"─" fg=Reset bg=Reset mod=NONE, 56:"─" fg=Reset bg=Reset mod=NONE, 57:"─" fg=Reset bg=Reset mod=NONE, 58:"─" fg=Reset bg=Reset mod=NONE, 59:"─" fg=Reset bg=Reset mod=NONE, 60:"─" fg=Reset bg=Reset mod=NONE, 61:"─" fg=Reset bg=Reset mod=NONE, 62:"─" fg=Reset bg=Reset mod=NONE, 63:"─" fg=Reset bg=Reset mod=NONE, 64:"─" fg=Reset bg=Reset mod=NONE, 65:"─" fg=Reset bg=Reset mod=NONE, 66:"─" fg=Reset bg=Reset mod=NONE, 67:"─" fg=Reset bg=Reset mod=NONE, 68:"─" fg=Reset bg=Reset mod=NONE, 69:"─" fg=Reset bg=Reset mod=NONE, 70:"─" fg=Reset bg=Reset mod=NONE, 71:"┘" fg=Reset bg=Reset mod=NONE
21: "                                                                                "
22: "                                                                                "
23: "                                                                                "
